2009-06-12  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (create_main_menu)
	* src/controller.c (controller_play_others_radio_cb):
	Add support for others' recommendations radios.

	Fixes: NB#4072

2009-05-16  Alberto Garcia  <agarcia@igalia.com>

	* src/http.c
	(http_download_file, http_get_buffer, http_post_buffer):
	Follow HTTP redirections

2009-05-15  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.c (rsp_scrobbler_thread_scrobble):
	Discard a track after 50 unsuccessful tries to scrobble it.

2009-05-13  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.c (rsp_scrobbler_thread_scrobble):
	Sleep between retries when scrobbling doesn't work.

2009-05-13  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.h
	* src/controller.c
	* src/radio.c
	* src/radio.h
	* src/vgl-main-window.c:
	Rename lastfm_radio to LastfmRadio

2009-05-07  Alberto Garcia  <agarcia@igalia.com>

	* src/Makefile.am:
	Create two different targets for marshal.c and marshal.h

2009-05-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_play_radio_by_url_thread):
	Refactor code a bit.

2009-05-05  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c
	(lastfm_session_destroy):
	* src/lastfm-ws.c
	(lastfm_ws_radio_tune, lastfm_ws_radio_get_playlist):
	Manage custom playlists, storing them temporarily in the legacy
	LastfmSession object.

	* src/controller.c (controller_play_radio_by_url_thread):
	Use lastfm_ws_radio_tune() for custom playlists too.

2009-05-05  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c
	(lastfm_ws_session_new, lastfm_ws_session_unref)
	(lastfm_ws_radio_tune, lastfm_ws_radio_get_playlist)
	* src/controller.c
	(start_playing_get_pls_thread)
	(controller_play_radio_by_url_thread):
	Store radio name in LastfmWsSession object.

2009-05-01  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_init):
	Set border only when using HildonWindow.
