@@ -1,6 +1,7 @@
 #!/bin/sh
 
-set -e
+set -ex
+
 libtoolize --automake --copy --force
 aclocal
 autoconf --force
@@ -8,3 +9,9 @@ autoheader --force
 automake --add-missing --copy --force-missing --foreign
 glib-gettextize --force --copy
 intltoolize --copy --force --automake
+
+if test x$NOCONFIGURE = x; then
+    ./configure "$@"
+else
+    echo Skipping configure process.
+fi
